--- a/src/screens/home/MovieList/MovieList.css
+++ b/src/screens/home/MovieList/MovieList.css
@@ -1,3 +1,16 @@
 .movie-card img {
   width: 100%;
 }
+
+.movie-gridlist a {
+  cursor: pointer;
+}
+
+.movie-gridlist__item {
+  height: 350px !important;
+}
+
+.movie-gridlist__item img {
+  height: 100%;
+  width: 100%;
+}
